--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/achromik/ChatApp.git"
+    "url": "git+https://github.com/sarahschoonmaker/node-chat"
   },
   "keywords": [
     "chat",
@@ -19,12 +19,12 @@
     "Express",
     "Socket.io"
   ],
-  "author": "Aleksander Chromik",
+  "author": "Sarah Schoonmaker",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/achromik/ChatApp/issues"
+    "url": "https://github.com/sarahschoonmaker/node-chat/issues"
   },
-  "homepage": "https://github.com/achromik/ChatApp#readme",
+  "homepage": "https://github.com/sarahschoonmaker/node-chat#readme",
   "dependencies": {
     "express": "^4.16.2",
     "font-awesome": "^4.7.0",
